# seccompy

./: .gitignore  Cargo.toml  README.md  flake.nix  toolchain.toml
src/: bpf.rs  error.rs  lib.rs  prctl.rs  seccomp.rs  seccomp_bpf.rs  unotify.rs
src/bpf/: instruction.rs  primitive.rs  statement.rs
src/seccomp/: check_action.rs  check_availability.rs  filter.rs  get_noti_sizes.rs  set_filter.rs  set_strict.rs
src/seccomp_bpf/: filter.rs  statement.rs
src/unotify/: add_descriptor.rs  check_validity.rs  receive_noti.rs  send_response.rs
